# webcam-viewer-bad

./: CMakeLists.txt  README.md  main.cpp
source/: camera.cpp  camera.h
